--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,9 @@ dependencies {
     def coroutines_version = "1.3.4"
     implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.4'
+    //Navigation Component
+    def nav_version = "2.5.3"
+    implementation"androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation"androidx.navigation:navigation-ui-ktx:$nav_version"
 
 }
