--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     //Live Data
     def lifecycle_version = "2.6.0-alpha03"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    // Swipe Refresh
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
 kapt {
     correctErrorTypes true
