--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
     def room_version = "2.4.3"
 
     implementation 'androidx.core:core-ktx:1.8.0'
